force-app/main/default/objects/Daily_Order_Combined__c/Daily_Order_Combined__c.object-meta.xml
<CustomObject>
    <label>Daily Order Combined</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Daily Order Combined Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Orders Combined</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>