force-app/main/default/objects/Daily_Order_Combined__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Daily Orders Combined</relationshipLabel>
    <relationshipName>Daily_Orders_Combined</relationshipName>
    <type>Lookup</type>
</CustomField>