force-app/main/default/objects/Daily_Order_Combined__c/fields/Customer_Name_with_link__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_with_link__c</fullName>
    <formula>IF(Account__c != null , HYPERLINK(&quot;/&quot; &amp; Account__c, Customer_Name__c) , Customer_Name__c)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>