force-app/main/default/objects/Daily_Order_Combined__c/fields/HW__c.field-meta.xml
<CustomField>
    <fullName>HW__c</fullName>
    <label>HW (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>