force-app/main/default/objects/Daily_Order_Combined__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <label>MCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>