force-app/main/default/objects/Daily_Order_Combined__c/fields/PS__c.field-meta.xml
<CustomField>
    <fullName>PS__c</fullName>
    <label>PS (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>