force-app/main/default/objects/Daily_Order_Combined__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>Daily Orders Combined</relationshipLabel>
    <relationshipName>Daily_Orders_Combined</relationshipName>
    <type>Lookup</type>
</CustomField>