force-app/main/default/objects/Daily_Order_Combined__c/fields/Summarisation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Summarisation_Frequency__c</fullName>
    <label>Summarisation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAILY</fullName>
            </value>
            <value>
                <fullName>WEEKLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>