force-app/main/default/objects/Daily_Order_Combined__c/fields/SW__c.field-meta.xml
<CustomField>
    <fullName>SW__c</fullName>
    <label>SW (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>