force-app/main/default/objects/Daily_Order_Combined__c/fields/SW_Attached_in_USD__c.field-meta.xml
<CustomField>
    <fullName>SW_Attached_in_USD__c</fullName>
    <label>SW Attached (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>