force-app/main/default/objects/Daily_Order_Combined__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <label>Today (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>