force-app/main/default/objects/Daily_Order_Combined__c/fields/TS__c.field-meta.xml
<CustomField>
    <fullName>TS__c</fullName>
    <label>TS (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>