force-app/main/default/objects/Daily_Order_Combined__c/fields/WTD__c.field-meta.xml
<CustomField>
    <fullName>WTD__c</fullName>
    <label>WTD (in USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>