force-app/main/default/objects/Daily_Order_Combined__c/fields/YTD__c.field-meta.xml
<CustomField>
    <fullName>YTD__c</fullName>
    <label>YTD</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>